--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -1,9 +1,9 @@
 % Dados pessoais
-\autor{Nome do Autor}
-\curso{Nome do Curso}
+\autor{Leandro Alves Ferreira Santos}
+\curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Título: Subtítulo do Trabalho}
+\titulo{ Software de auxílio de ensino de matemática para crianças}
 \data{2013}
 \palavraChaveUm{Palavra-chave01}
 \palavraChaveDois{Palavra-chave02}
